@@ -1,9 +1,7 @@
 package model;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 public class Shop {
@@ -18,41 +16,44 @@ public class Shop {
     }
 
     public Client findExpensiveReceipt() {
-        Map<Client, Double> mapWithExpenses = new HashMap<>();
-        Client clientWithBiggestExpenses = null;
-        double maxExpenses = 0;
+        if (clientList.isEmpty()) {
+            throw new IllegalStateException();
+        }
+        Client clientWithMaxExpenses = clientList.get(0);
 
         for (Client client : clientList) {
-            double expenses = 0.0;
-            for (Product product : client.getProductList()) {
-                expenses += product.getCost();
-            }
-            mapWithExpenses.put(client, expenses);
-        }
-        for (Map.Entry<Client, Double> entrySet : mapWithExpenses.entrySet()) {
-            if (entrySet.getValue() > maxExpenses) {
-                maxExpenses = entrySet.getValue();
-                clientWithBiggestExpenses = entrySet.getKey();
+            if (client.getExpenses() > clientWithMaxExpenses.getExpenses()) {
+                clientWithMaxExpenses = client;
             }
         }
-        return clientWithBiggestExpenses;
+        return clientWithMaxExpenses;
+
+//        Map<Client, Double> mapWithExpenses = new HashMap<>();
+//        Client clientWithBiggestExpenses = null;
+//        double maxExpenses = 0;
+//
+//        for (Client client : clientList) {
+//            mapWithExpenses.put(client, client.getExpenses());
+//        }
+//        for (Map.Entry<Client, Double> entrySet : mapWithExpenses.entrySet()) {
+//            if (entrySet.getValue() > maxExpenses) {
+//                maxExpenses = entrySet.getValue();
+//                clientWithBiggestExpenses = entrySet.getKey();
+//            }
+//        }
+//        return clientWithBiggestExpenses;
     }
 
     public List<Client> clientListWithDurex() {
         return clientList.stream()
-                .filter(client -> client.getProductList().stream().anyMatch(product -> product.getName().equalsIgnoreCase("Durex")))
-                .collect(Collectors.toList());
+                .filter(Client::boughtCondom)
+                .toList();
     }
 
     public List<Client> wrongSizeDurexSearch() {
-        List<Client> clientWithDurex = clientListWithDurex();
-        return clientWithDurex.stream()
-                .filter(client -> client.getProductList().stream()
-                        .anyMatch(product -> product instanceof Condom && !isCorrectSize((Condom) product, client.getSizePenis())))
-                .collect(Collectors.toList());
+        return clientList.stream()
+                .filter(Client::boughtWrongSizeCondom)
+                .toList();
     }
 
-    boolean isCorrectSize(Condom condom, SizeCondom clientSize) {
-        return condom.getSizeCondom().equals(clientSize);
-    }
 }
